revision-derive/tests/compile_fail/type_level_map_indexed.stderr
error: type-level `map = "indexed"` is not supported; use the per-field attribute `#[revision(indexed_map)]` on each map-shaped field that should use indexed encoding instead
 --> tests/compile_fail/type_level_map_indexed.rs:6:56
  |
6 | #[revisioned(revision(1, encoding = "optimised", map = "indexed"))]
  |                                                        ^^^^^^^^^
